--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,6 @@ header {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--heading-text-color);
 }
 
@@ -91,9 +90,7 @@ header {
 }
 
 .site-nav .link {
-  font-family: Roboto;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
@@ -141,6 +138,7 @@ header {
 .contacts-phone svg {
   margin-right: 10px;
   fill: currentColor;
+  /* vertical-align: middle; */
 }
 
 .contacts-imail,
@@ -219,7 +217,6 @@ header {
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
   text-transform: capitalize;
   border-radius: 4px;
   border: 1px solid transparent;
@@ -294,9 +291,7 @@ header {
   padding-top: 30px;
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--heading-text-color);
 }
@@ -305,9 +300,6 @@ header {
   margin: 0;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
@@ -328,23 +320,18 @@ header {
 }
 
 .work-totel {
-  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
   color: var(--heading-text-color);
 }
 
 .work-text {
   margin: 0;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--interactive-text-color);
   background: rgba(47, 48, 58, 0.8); /* что бы видно было текст */
@@ -376,26 +363,22 @@ header {
 .team-name {
   margin: 0;
   margin-bottom: 10px;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--heading-text-color);
 }
 
 .team-position {
   margin: 0;
   margin-bottom: 16px;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
@@ -523,7 +506,6 @@ footer .item + .item {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.192;
-  letter-spacing: 0.03em;
 }
 
 .adress-footer {
@@ -533,34 +515,23 @@ footer .item + .item {
 }
 
 .adress-text {
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   color: var(--interactive-text-color);
 }
 
 .adress-imail {
   margin-top: 9px;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
 .adress-phone {
   margin-top: 9px;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -571,12 +542,9 @@ footer .item + .item {
 }
 
 .connection-title {
-  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--interactive-text-color);
 }
@@ -632,7 +600,6 @@ footer .item + .item {
 .example-titel {
   margin: 0;
   margin-bottom: 4px;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -643,23 +610,19 @@ footer .item + .item {
 
 .example-text {
   margin: 0;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 
 .example-active {
   margin: 0;
-  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
-  letter-spacing: 0.03em;
   color: var(--interactive-text-color);
   background: var(--active-text-color); /* на время*/
 }
