--- a/css/styles.css
+++ b/css/styles.css
@@ -176,8 +176,14 @@ header {
 }
 
 .container-hero {
-  background-image: url(../images/baner.jpg);
+  background-image: linear-gradient(
+      to left,
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url('../images/baner.jpg');
   max-width: 1600px;
+  height: 600px;
   padding-top: 200px;
   padding-bottom: 200px;
   margin-left: auto;
@@ -582,6 +588,30 @@ footer .item + .item {
   width: calc((100% - 30px) / 2);
 }
 
+.subscribe .button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+}
+
+.subscribe p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+}
+
+.subscribe svg {
+  width: 24px;
+  height: 24px;
+}
+
 /* портфолио */
 /* main */
 
@@ -628,7 +658,7 @@ footer .item + .item {
   font-size: 18px;
   line-height: 1.56;
   color: var(--interactive-text-color);
-  background: var(--active-text-color); /* на время*/
+  /*background: var(--active-text-color); на время*/
 }
 
 .portfolio-filter {
@@ -649,4 +679,9 @@ footer .item + .item {
 
 .portfolio-filter .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.portfolio-filter .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
