--- a/css/styles.css
+++ b/css/styles.css
@@ -595,11 +595,15 @@ footer .item + .item {
   width: 200px;
   height: 50px;
   margin: 0;
-  padding: 0;
+  padding-top: 10px;
+  padding-right: 28px;
+  padding-bottom: 10px;
+  padding-left: 28px;
 }
 
 .subscribe .button::after {
-  background-image: url(../images/svg/sprite.svg#icon-fly);
+  contain: '';
+  background-image: url(../images/svg/fly.svg);
   width: 24px;
   height: 24px;
   margin-left: 10px;
